test/interaction/Stuck.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : Set₁ " nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-info-action "*Error*" "Stuck.agda:12.7-11: error: [SplitError.UnificationStuck] I'm not sure if there should be a case for the constructor e, because I get stuck when trying to solve the following unification problems (inferred index ≟ expected index): j ≟ i j ≟ x₁ when checking that the expression ? has type Set₁" nil)
((last . 3) . (agda2-maybe-goto '("Stuck.agda" . 137)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
